# endor-aspects-it

./: .bazelignore  .bazelrc  .gitignore  MODULE.bazel  README.MD
example/javascript/: README.md  js_library.bzl
rules_go/0.42.0/: WORKSPACE.template
rules_go/0.42.0-bzlmod/: MODULE.bazel  WORKSPACE
rules_go/0.42.0-bzlmod/bazel/: BUILD.bazel
rules_go/0.42.0-bzlmod/cmd/: BUILD.bazel
rules_go/0.42.0-bzlmod/handlers/: BUILD.bazel
rules_go/0.42.0-bzlmod/pkg/greetings/: BUILD.bazel
rules_js/2.0.0/: .bazelrc  WORKSPACE  aspect
rules_js/2.0.0/endor_aspects/custom/javascript/js_binary/: js_binary.bzl  provider.bzl
