module(
    name = "rules_go-0.42.0",
    version = "0.0.1",
)

bazel_dep(name = "rules_go", version = "0.42.0")
bazel_dep(name = "gazelle", version = "0.29.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.19")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

use_repo(
    go_deps,
    "com_github_antchfx_xmlquery",
    "com_github_bazelbuild_rules_go",
    "com_github_bgentry_go_netrc",
    "com_github_bwmarrin_snowflake",
    "com_github_google_uuid",
    "com_github_gorilla_mux",
    "com_github_sirupsen_logrus",
)
